@@ -135,6 +135,7 @@ typedef int_val (*c_prim5)(int_val,int_val,int_val,int_val,int_val);
 typedef int_val (*c_primN)(value*,int);
 
 #define Error(cond,err)		if( cond ) { failure(err); }
+#define RuntimeError(err)	{ PushInfos(); BeginCall(); val_throw(alloc_string(err)); }
 #define Instr(x)	case x:
 #define Next		break;
 
@@ -173,6 +174,11 @@ typedef int_val (*c_primN)(value*,int);
 		if( restpc ) pc = (int_val*)*csp; \
 		*csp-- = ERASE;
 
+#define CallFailure() { \
+		PushInfos(); \
+		val_throw(alloc_string("Invalid call")); \
+}
+
 #define SetupBeforeCall(this_arg) \
 		vfunction *f = (vfunction*)acc; \
 		PushInfos(); \
@@ -187,7 +193,7 @@ typedef int_val (*c_primN)(value*,int);
 
 #define DoCall(this_arg) \
 		if( acc & 1 ) { \
-			acc = (int_val)val_null; \
+			CallFailure(); \
 			PopMacro(*pc++); \
 		} else if( val_tag(acc) == VAL_FUNCTION && *pc == ((vfunction*)acc)->nargs ) { \
 			PushInfos(); \
@@ -230,10 +236,10 @@ typedef int_val (*c_primN)(value*,int);
 				acc = ((c_primN)((vfunction*)acc)->addr)((value*)args,(int)*pc); \
 				RestoreAfterCall(); \
 			} else \
-				acc = (int_val)val_null; \
+				CallFailure(); \
 			PopMacro(*pc++); \
 		} else { \
-			acc = (int_val)val_null; \
+			CallFailure(); \
 			PopMacro(*pc++); \
 		}
 
@@ -241,7 +247,7 @@ typedef int_val (*c_primN)(value*,int);
 		if( (acc & 1) && (*sp & 1) ) \
 			acc = (int_val)alloc_int(val_int(*sp) op val_int(acc)); \
 		else \
-			acc = (int_val)val_null; \
+			RuntimeError(#op); \
 		*sp++ = ERASE; \
 		Next
 
@@ -266,14 +272,14 @@ typedef int_val (*c_primN)(value*,int);
 			else if( val_tag(*sp) == VAL_OBJECT ) \
 			    ObjectOp(*sp,acc,id_op) \
 			else \
-				acc = (int_val)val_null; \
+				RuntimeError(#op); \
 		} else if( *sp & 1 ) { \
 			if( val_tag(acc) == VAL_FLOAT ) \
 				acc = (int_val)alloc_float(fop(val_int(*sp),val_float(acc))); \
 			else if( val_tag(acc) == VAL_OBJECT ) \
 				ObjectOp(acc,*sp,id_rop) \
 			else \
-				acc = (int_val)val_null; \
+				RuntimeError(#op); \
 		} else if( val_tag(acc) == VAL_FLOAT && val_tag(*sp) == VAL_FLOAT ) \
 			acc = (int_val)alloc_float(fop(val_float(*sp),val_float(acc))); \
 		else if( val_tag(*sp) == VAL_OBJECT ) \
@@ -281,7 +287,7 @@ typedef int_val (*c_primN)(value*,int);
 		else if( val_tag(acc) == VAL_OBJECT ) \
 			ObjectOp(acc,*sp,id_rop) \
 		else \
-			acc = (int_val)val_null; \
+			RuntimeError(#op); \
 		*sp++ = ERASE; \
 		Next;
 
@@ -420,7 +426,7 @@ static int_val interp_loop( neko_vm *vm, neko_module *m, int_val _acc, int_val *
 			value *f = otable_find(((vobject*)acc)->table,(field)*pc);
 			acc = (int_val)(f?*f:val_null);
 		} else
-			acc = (int_val)val_null;
+			RuntimeError("Invalid field access");
 		pc++;
 		Next;
 	Instr(AccArray)
@@ -622,11 +628,9 @@ static int_val interp_loop( neko_vm *vm, neko_module *m, int_val _acc, int_val *
 				val_array_ptr(tmp)[n] = (value)*sp;
 				*sp++ = ERASE;
 			}
-			if( !val_is_int(acc) && val_tag(acc) == VAL_FUNCTION ) {
-				acc = (int_val)alloc_module_function(((vfunction*)acc)->module,(int_val)((vfunction*)acc)->addr,((vfunction*)acc)->nargs);
-				((vfunction*)acc)->env = (value)tmp;
-			} else
-				acc = (int_val)val_null;
+			Error( val_is_int(acc) || val_tag(acc) != VAL_FUNCTION , "Invalid environment" );
+			acc = (int_val)alloc_module_function(((vfunction*)acc)->module,(int_val)((vfunction*)acc)->addr,((vfunction*)acc)->nargs);
+			((vfunction*)acc)->env = (value)tmp;
 		}
 		Next;
 	Instr(MakeArray)
@@ -662,7 +666,7 @@ static int_val interp_loop( neko_vm *vm, neko_module *m, int_val _acc, int_val *
 			else if( val_tag(*sp) == VAL_OBJECT )
 				ObjectOp(*sp,acc,id_add)
 			else
-				acc = (int_val)val_null;
+				RuntimeError("+");
 		} else if( *sp & 1 ) {
 			if( val_tag(acc) == VAL_FLOAT )
 				acc = (int_val)alloc_float(val_int(*sp) + val_float(acc));
@@ -671,7 +675,7 @@ static int_val interp_loop( neko_vm *vm, neko_module *m, int_val _acc, int_val *
 			else if( val_tag(acc) == VAL_OBJECT )
 				ObjectOp(acc,*sp,id_radd)
 			else
-				acc = (int_val)val_null;
+				RuntimeError("+");
 		} else if( val_tag(acc) == VAL_FLOAT && val_tag(*sp) == VAL_FLOAT )
 			acc = (int_val)alloc_float(val_float(*sp) + val_float(acc));
 		else if( (val_tag(acc)&7) == VAL_STRING && (val_tag(*sp)&7) == VAL_STRING )
@@ -690,7 +694,7 @@ static int_val interp_loop( neko_vm *vm, neko_module *m, int_val _acc, int_val *
 		else if( val_tag(acc) == VAL_OBJECT )
 			ObjectOp(acc,*sp,id_radd)
 		else
-			acc = (int_val)val_null;
+			RuntimeError("+");
 		*sp++ = ERASE;
 		Next;
 	Instr(Sub)
@@ -705,7 +709,7 @@ static int_val interp_loop( neko_vm *vm, neko_module *m, int_val _acc, int_val *
 		else if( val_is_object(*sp) )
 			ObjectOp(*sp,acc,id_div)
 		else
-			acc = (int_val)val_null;
+			RuntimeError("/");
 		*sp++ = ERASE;
 		Next;
 	Instr(Mod)
@@ -723,7 +727,7 @@ static int_val interp_loop( neko_vm *vm, neko_module *m, int_val _acc, int_val *
 		if( (acc & 1) && (*sp & 1) )
 			acc = (int_val)alloc_int(((unsigned int)val_int(*sp)) >> val_int(acc));
 		else
-			acc = (int_val)val_null;
+			RuntimeError(">>>");
 		*sp++ = ERASE;
 		Next;
 	Instr(Or)
